# To-Do-API-Rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20260410115458_create_todos_table.sql
src/: app.rs  main.rs
src/config/: settings.rs
src/database/: db.rs
src/handlers/: todo_handler.rs
src/models/: todo.rs
src/repositories/: todo_repo.rs
src/routes/: todo_routes.rs
src/services/: todo_service.rs
